Added box shadow

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h3>CONTACT US</h3>	
 		<h3>GIVE A TALK</h3>
 		<h3>JOIN THE MEETUP</h3>
+		<h3>USEFUL LINKS</h3>
 		<h3><i class="fa fa-twitter"></i></h3>
 	</section>
 </div>
@@ -41,7 +42,12 @@
 	
 	<div class="second-container">
 		<section class="main-container-2">
-			
+			<h3 class="main-container-h3">About Us</h3>
+			<p class="main-container-p">This group is for professional web designers and developers looking to network with others in the industry, learn about new or emerging technologies, and for anyone looking to learn web development (beginner to advanced).</p>
+			<p class="main-container-p">We will be talking design for the web, sharing experiences with use of different tools &amp; languages, critiquing web sites, talking industry, business, employment news, and sharing motivations and inspirations. This group is intended to become a hub for all today's technologies that make up the Internet as we know it. </p>
+			<p class="main-container-p">
+				We will be meeting monthly in informal settings (usually over coffee, drink and /or food) to network and socialize with other fellow web development professionals and enthusiasts.
+			</p>
 		</section>
 	</div>
 
