--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="leftnav">
-	<section class="navleft">
-		<h3>ABOUT US</h3>
-		<h3>CONTACT US</h3>	
-		<h3>GIVE A TALK</h3>
-		<h3>JOIN THE MEETUP</h3>
-		<h3>USEFUL LINKS</h3>
-		<h3><i class="fa fa-twitter"></i></h3>
-	</section>
+<div class="navfixed">
+	<div class="leftnav">
+		<section class="navleft">
+			<h3>ABOUT US</h3>
+			<h3>CONTACT US</h3>	
+			<h3>GIVE A TALK</h3>
+			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-and-Mobile-Developers/"><h3>JOIN THE MEETUP</h3></a>
+			<h3>USEFUL LINKS</h3>
+			<h3><i class="fa fa-twitter"></i></h3>
+		</section>
+	</div>
 </div>
 
 <div class="content">
@@ -51,7 +53,33 @@
 		</section>
 	</div>
 
+	<div class="third-container">
+		<div class="third-container-3">
+			<h3 class="third-container-h3">
+				Useful Links
+			</h3>
+			<p><a target="_blank" href="https://developer.mozilla.org/en-US/">Mozilla Developer Network</a><br />
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dolores vitae quos fugit fuga soluta earum ea, reiciendis aspernatur incidunt. Quasi deleniti quibusdam error corrupti provident, quo, debitis quas dolorem.
+			</p>
+			<p><a href="http://codepen.io/">Codepen</a><br />
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sunt eveniet facilis dicta eum porro at, odit voluptas vel. Reiciendis dolor dolores esse cupiditate molestiae voluptas, laboriosam mollitia sapiente quibusdam.</p>
+			<p><a href="http://www.news.ycombinator.com">Hacker News</a><br />
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi repudiandae hic, laboriosam laborum. Expedita est voluptate reprehenderit ab, dignissimos sequi nulla voluptatibus fuga dolore nostrum, molestiae tempore tenetur, quibusdam delectus?</p>
+		</div>
+	</div>
+	
+	<footer>
+		<div class="mainfooter">
+			<div class="footer-content">
+				<h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4>
+				<h3 class="footer-h3"><i class="fa fa-twitter"></i></h3>
+			</div>
+		</div>
+	</footer>
+
 </div>
+
+
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
