--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="navfixed">
 	<div class="leftnav">
 		<section class="navleft">
-			<h3>ABOUT US</h3>
-			<h3>CONTACT US</h3>	
+			<h3>ABOUT</h3>
+			<h3>CONTACT</h3>	
 			<h3>GIVE A TALK</h3>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-and-Mobile-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<h3>USEFUL LINKS</h3>
@@ -44,7 +44,7 @@
 	
 	<div class="second-container">
 		<section class="main-container-2">
-			<h3 class="main-container-h3">About Us</h3>
+			<h3 class="main-container-h3">About</h3>
 			<p class="main-container-p">This group is for professional web designers and developers looking to network with others in the industry, learn about new or emerging technologies, and for anyone looking to learn web development (beginner to advanced).</p>
 			<p class="main-container-p">We will be talking design for the web, sharing experiences with use of different tools &amp; languages, critiquing web sites, talking industry, business, employment news, and sharing motivations and inspirations. This group is intended to become a hub for all today's technologies that make up the Internet as we know it. </p>
 			<p class="main-container-p">
@@ -58,13 +58,36 @@
 			<h3 class="third-container-h3">
 				Useful Links
 			</h3>
-			<p><a target="_blank" href="https://developer.mozilla.org/en-US/">Mozilla Developer Network</a><br />
+			<p class="three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a><br />
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dolores vitae quos fugit fuga soluta earum ea, reiciendis aspernatur incidunt. Quasi deleniti quibusdam error corrupti provident, quo, debitis quas dolorem.
 			</p>
-			<p><a href="http://codepen.io/">Codepen</a><br />
+			<p class="three-link"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a><br />
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sunt eveniet facilis dicta eum porro at, odit voluptas vel. Reiciendis dolor dolores esse cupiditate molestiae voluptas, laboriosam mollitia sapiente quibusdam.</p>
-			<p><a href="http://www.news.ycombinator.com">Hacker News</a><br />
+			<p class="three-link"><a href="https://news.ycombinator.com" target="_blank"><span class="three-big">Hacker News</span></a><br />
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi repudiandae hic, laboriosam laborum. Expedita est voluptate reprehenderit ab, dignissimos sequi nulla voluptatibus fuga dolore nostrum, molestiae tempore tenetur, quibusdam delectus?</p>
+		</div>
+	</div>
+
+	<div class="fourth-container-wrapper">
+		<div class="fourth-container">
+			<h3 class="fourth-container-h3">Sponsors</h3>
+			<div class="sponsorcontainer">
+				<div class="sponsor sponsorone">
+					<p>Webcare 360</p>
+					<img src="images/webcare.png" style="width:250px;" alt="">
+				</div>
+				<div class="sponsor sponsortwo">
+					<p>The Hive</p>
+					<img src="images/hive.png" style="width:250px;" alt="">
+				</div>
+			</div>
+			<div class="clearfix"></div>
+			<div class="webcare">
+				<h4>
+					Webcare360.com
+				</h4>
+				<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
+			</div>
 		</div>
 	</div>
 	
