added twitter link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h3>GIVE A TALK</h3>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-and-Mobile-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<h3>USEFUL LINKS</h3>
-			<h3><i class="fa fa-twitter"></i></h3>
+			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
 </div>
@@ -95,7 +95,7 @@
 		<div class="mainfooter">
 			<div class="footer-content">
 				<h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4>
-				<h3 class="footer-h3"><i class="fa fa-twitter"></i></h3>
+				<a href="https://twitter.com/jacksondevs" target="_blank"><h3 class="footer-h3"><i class="fa fa-twitter"></i></h3></a>
 			</div>
 		</div>
 	</footer>
