--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<footer>
 		<div class="mainfooter">
 			<div class="footer-content">
-				<h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4>
+				<a href="mailto:hello@developers.ms"><h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4></a>
 				<a href="https://twitter.com/jacksondevs" target="_blank"><h3 class="footer-h3"><i class="fa fa-twitter"></i></h3></a>
 			</div>
 		</div>
