--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 		<section class="main-container-2">
 			<h3 class="main-container-h3">About</h3>
 			<p class="main-container-p">This group is for professional web designers and developers looking to network with others in the industry, learn about new or emerging technologies, and for anyone looking to learn web development (beginner to advanced).</p>
-			<p class="main-container-p">We will be talking design for the web, sharing experiences with use of different tools &amp; languages, critiquing web sites, talking industry, business, employment news, and sharing motivations and inspirations. This group is intended to become a hub for all today's technologies that make up the Internet as we know it. </p>
+			<p class="main-container-p">We talk design for the web, share experiences with use of different tools &amp; languages, critique web sites, talk industry, business, employment news, and share motivations and inspirations. This group is intended to become a hub for all today's technologies that make up the Internet as we know it. </p>
 			<p class="main-container-p">
-				We will be meeting monthly in informal settings (usually over coffee, drink and /or food) to network and socialize with other fellow web development professionals and enthusiasts.
+				We meet monthly in informal settings (usually over coffee, drink and /or food) to network and socialize with other fellow web development professionals and enthusiasts.
 			</p>
 		</section>
 	</div>
