--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <div class="navfixed">
 	<div class="leftnav">
 		<section class="navleft">
-			<h3>ABOUT</h3>
-			<h3>CONTACT</h3>	
-			<h3>GIVE A TALK</h3>
+			<h3 class="aboutus">ABOUT</h3>
+			<h3 class="contactus">CONTACT</h3>	
+			<h3 class="giveatalk">GIVE A TALK</h3>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-and-Mobile-Developers/"><h3>JOIN THE MEETUP</h3></a>
-			<h3>USEFUL LINKS</h3>
+			<h3 class="usefullinks">USEFUL LINKS</h3>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
@@ -72,7 +72,7 @@
 		<div class="fourth-container">
 			<h3 class="fourth-container-h3">Sponsors</h3>
 			<div class="sponsorcontainer">
-				<div class="sponsor sponsorone">
+				<div class="sponsor sponsorone" >
 					<p>Webcare 360</p>
 					<img src="images/webcare.png" style="width:250px;" alt="">
 				</div>
@@ -84,7 +84,13 @@
 			<div class="clearfix"></div>
 			<div class="webcare">
 				<h4>
-					Webcare360.com
+					<a target="_blank" href="http://www.Webcare360.com">Webcare360.com</a>
+				</h4>
+				<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
+			</div>
+			<div class="hive">
+				<h4>
+					<a target="_blank" href="http://www.workinthehive.com">#thehive</a>
 				</h4>
 				<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
 			</div>
