--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				Useful Links
 			</h3>
 			<p class="three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a><br />
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur dolores vitae quos fugit fuga soluta earum ea, reiciendis aspernatur incidunt. Quasi deleniti quibusdam error corrupti provident, quo, debitis quas dolorem.
+			he Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps.
 			</p>
 			<p class="three-link"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a><br />
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sunt eveniet facilis dicta eum porro at, odit voluptas vel. Reiciendis dolor dolores esse cupiditate molestiae voluptas, laboriosam mollitia sapiente quibusdam.</p>
