--- a/index.html
+++ b/index.html
@@ -58,13 +58,17 @@
 			<h3 class="third-container-h3">
 				Useful Links
 			</h3>
-			<p class="three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a><br />
-			he Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps.
+			<p class="three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a></p>
+			<p class="three-link">The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps.
 			</p>
-			<p class="three-link"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a><br />
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat sunt eveniet facilis dicta eum porro at, odit voluptas vel. Reiciendis dolor dolores esse cupiditate molestiae voluptas, laboriosam mollitia sapiente quibusdam.</p>
-			<p class="three-link"><a href="https://news.ycombinator.com" target="_blank"><span class="three-big">Hacker News</span></a><br />
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi repudiandae hic, laboriosam laborum. Expedita est voluptate reprehenderit ab, dignissimos sequi nulla voluptatibus fuga dolore nostrum, molestiae tempore tenetur, quibusdam delectus?</p>
+			<p class="three-link three-under"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a></p>
+			<p class="three-link ">CodePen is an HTML, CSS, and JavaScript code editor in your browser with instant previews of the code you see and write. Codepen is a great too to play with different code and see cutting edge techniues.</p>
+			<p class="three-link three-under"><a href="https://news.ycombinator.com" target="_blank"><span class="three-big">Hacker News</span></a></p>
+			<p>Hacker News caters to programmers and entrepreneurs, delivering content related to computer science and entrepreneurship. It is run by Paul Graham's investment fund and startup incubator, Y Combinator.</p>
+			<p class="three-link three-under"><a href="http://www.css-tricks.com" target="_blank"><span class="three-big">CSS-Tricks</span></a></p>
+			<p>Dedicated to the world of CSS and related technologies. Snippets, videos, tricks and tutorials</p>
+			<p class="three-link three-under"><a href="http://www.codecademy.com/"><span class="three-big">Code Academy</span></a></p>
+			<p>Learn how to code.</p>
 		</div>
 	</div>
 
