--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta charset="UTF-8">
 	<title>{ JAWAD }</title>
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic' rel='stylesheet' type='text/css'>
@@ -9,6 +10,13 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+<div class="mobilenav">
+	<div class="mobile-nav-container">
+		<h2 class="mobile-hamburger" id="mobile-hamburger"><img class="mobile-burger-image" src="images/nav.png" alt=""></h2><h1 class="mobile-logo">JAWAD</h1>
+	</div>
+</div>
+
 <div class="navfixed">
 	<div class="leftnav">
 		<section class="navleft">
@@ -31,7 +39,7 @@
 				</div>
 			</div>
 			<div class="heading">
-				<img width="700px" src="images/headline.png" alt="">
+				<img class="heading-image" src="images/headline.png" alt="Jackson Area Web &amp; App Developers">
 			</div>
 		</section>
 	</div>
