added responsive styling

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
 </head>
 <body>
 
-<div class="mobilenav">
-	<div class="mobile-nav-container">
-		<h2 class="mobile-hamburger" id="mobile-hamburger"><img class="mobile-burger-image" src="images/nav.png" alt=""></h2><h1 class="mobile-logo">JAWAD</h1>
-	</div>
-</div>
+
 
 <div class="navfixed">
 	<div class="leftnav">
@@ -31,6 +27,12 @@
 </div>
 
 <div class="content">
+	<div class="mobilenav">
+		<div class="mobile-nav-container">
+			<h2 class="mobile-hamburger" id="mobile-hamburger"><img class="mobile-burger-image" src="images/nav.png" alt=""></h2><h1 class="mobile-logo">JAWAD</h1>
+		</div>
+	</div>
+
 	<div class="main-header">
 		<section class="main-header-inner">
 			<div class="main-top">
@@ -66,7 +68,7 @@
 			<h3 class="third-container-h3">
 				Useful Links
 			</h3>
-			<p class="three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a></p>
+			<p class="three-link first-mobile-three-link"><a target="_blank" href="https://developer.mozilla.org/en-US/"><span class="three-big">Mozilla Developer Network</span></a></p>
 			<p class="three-link">The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps.
 			</p>
 			<p class="three-link three-under"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a></p>
@@ -83,29 +85,41 @@
 	<div class="fourth-container-wrapper">
 		<div class="fourth-container">
 			<h3 class="fourth-container-h3">Sponsors</h3>
-			<div class="sponsorcontainer">
-				<div class="sponsor sponsorone" >
-					<p>Webcare 360</p>
-					<img src="images/webcare.png" style="width:250px;" alt="">
+			<section class="sponsor-container-section">
+				<div class="sponsorcontainer">
+					<div class="sponsor sponsorone" >
+						<p>Webcare 360</p>
+						<img src="images/webcare.png" style="width:250px;" alt="">
+					</div>
+					<div class="sponsor sponsortwo">
+						<p>The Hive</p>
+						<img src="images/hive.png" style="width:250px;" alt="">
+					</div>
 				</div>
-				<div class="sponsor sponsortwo">
-					<p>The Hive</p>
-					<img src="images/hive.png" style="width:250px;" alt="">
+				<div class="clearfix"></div>
+				<div class="webcare">
+					<h4>
+						<a target="_blank" href="http://www.Webcare360.com">Webcare360.com</a>
+					</h4>
+					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
 				</div>
-			</div>
-			<div class="clearfix"></div>
-			<div class="webcare">
-				<h4>
-					<a target="_blank" href="http://www.Webcare360.com">Webcare360.com</a>
-				</h4>
-				<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
-			</div>
-			<div class="hive">
-				<h4>
-					<a target="_blank" href="http://www.workinthehive.com">#thehive</a>
-				</h4>
-				<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
-			</div>
+				<div class="hive">
+					<h4>
+						<a target="_blank" href="http://www.workinthehive.com">#thehive</a>
+					</h4>
+					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
+				</div>
+			</section>
+
+			<section class="mobile-sponsors">
+				<div class="mobile-sponsor">
+					<a target="_blank" href="http://www.webcare360.com"><p class="mobile-sponsor-link">Webcare360.com</p></a>
+				</div>
+				<div class="mobile-sponsor" style="margin-top:30px;">
+					<a target="_blank" href="http://www.workinthehive.com"><p class="mobile-sponsor-link">#thehive</p></a>
+				</div>
+			</section>
+
 		</div>
 	</div>
 	
