Fixed anchor links

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <div class="navfixed">
 	<div class="leftnav">
 		<section class="navleft">
-			<h3 class="aboutus">ABOUT</h3>
+			<a href="#" class="aboutus"><h3 >ABOUT</h3></a>
 			<a href="mailto:hello@developers.ms"><h3 class="contactus">CONTACT</h3>	</a>
 			<a href="mailto:hello@developers.ms?subject=Submit a talk" title="Submit a talk"><h3 class="giveatalk" >GIVE A TALK</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-and-Mobile-Developers/"><h3>JOIN THE MEETUP</h3></a>
-			<h3 class="usefullinks" >USEFUL LINKS</h3>
+			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
@@ -39,7 +39,7 @@
 <div class="content">
 	<div class="mobilenav">
 		<div class="mobile-nav-container">
-			<h2 class="mobile-hamburger" id="mobile-hamburger"><img class="mobile-burger-image" src="images/nav.png" alt=""></h2><h1 class="mobile-logo">JAWAD</h1>
+			<a href="#" id="mobile-hamburger"><h2 class="mobile-hamburger" ><img class="mobile-burger-image" src="images/nav.png" alt=""></h2></a><h1 class="mobile-logo">JAWAD</h1>
 		</div>
 	</div>
 
@@ -163,7 +163,7 @@
 </div>
 
 
-
+<script src="bower_components/fastclick/lib/fastclick.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
 <script src="js/main.js"></script>
