--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<p class="three-link">The Mozilla Developer Network (MDN) provides information about Open Web technologies including HTML, CSS, and APIs for both Web sites and HTML5 Apps.
 			</p>
 			<p class="three-link three-under"><a href="http://codepen.io/" target="_blank"><span class="three-big">Codepen</span></a></p>
-			<p class="three-link ">CodePen is an HTML, CSS, and JavaScript code editor in your browser with instant previews of the code you see and write. Codepen is a great too to play with different code and see cutting edge techniues.</p>
+			<p class="three-link ">CodePen is an HTML, CSS, and JavaScript code editor in your browser with instant previews of the code you see and write. Codepen is a great too to play with different code and see cutting edge techniques.</p>
 			<p class="three-link three-under"><a href="https://news.ycombinator.com" target="_blank"><span class="three-big">Hacker News</span></a></p>
 			<p class="three-link">Hacker News caters to programmers and entrepreneurs, delivering content related to computer science and entrepreneurship. It is run by Paul Graham's investment fund and startup incubator, Y Combinator.</p>
 			<p class="three-link three-under"><a href="http://www.css-tricks.com" target="_blank"><span class="three-big">CSS-Tricks</span></a></p>
