first run through of code-of-conduct modeled after JSConf code of conduct: http://jsconf.com/codeofconduct.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<div class="leftnav">
 		<section class="navleft">
 			<a href="#" class="aboutus"><h3 >ABOUT</h3></a>
+			<a href="#" class="code-of-conduct"><h3 >CODE OF CONDUCT</h3></a>
 			<a href="mailto:hello@developers.ms"><h3 class="contactus">CONTACT</h3>	</a>
 			<a href="mailto:hello@developers.ms?subject=Submit a talk" title="Submit a talk"><h3 class="giveatalk" >GIVE A TALK</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
@@ -74,6 +75,81 @@
 			<p class="main-container-p">We talk design for the web, share experiences with use of different tools &amp; languages, critique web sites, talk industry, business, employment news, and share motivations and inspirations. This group is intended to become a hub for all today's technologies that make up the Internet as we know it. </p>
 			<p class="main-container-p">
 				We meet monthly in informal settings (usually over coffee, drink and /or food) to network and socialize with other fellow web development professionals and enthusiasts.
+			</p>
+		</section>
+	</div>
+
+	<div class="third-container">
+		<section class="third-container-3">
+			<div class="line-holder-2">
+				<img class="line1" src="images/darkline2.png" alt="">
+					<h3 class="third-container-h3" id="code-of-conducttarget">Code of Conduct</h3>
+				<img src="images/darkline2.png" alt="" class="line2">
+			</div>
+			<div class="clearfix"></div>
+
+			<p>
+			All presenters, sponsors, and volunteers at any JAWAD event are
+			required to agree with the following code of conduct. Organizers will enforce
+			this code throughout every event.
+			</p>
+
+			<h3>The Quick Version</h3>
+
+			<p>
+			JAWAD is dedicated to providing a harassment-free experience for
+			everyone, regardless of gender, sexual orientation, disability, physical
+			appearance, body size, race, or religion. We do not tolerate harassment of
+			meeting participants in any form. Sexual language and imagery is not
+			appropriate for any meeting or post meeting social activities. Meeting
+			participants violating these rules may be sanctioned or expelled from the
+			meeting without a refund at the discretion of the meeting organizers.
+			</p>
+
+			<h3>The Less Quick Version</h3>
+
+			<p>
+			Harassment includes offensive verbal comments related to gender, sexual
+			orientation, disability, physical appearance, body size, race, religion, sexual
+			images in public spaces, deliberate intimidation, stalking, following,
+			harassing photography or recording, sustained disruption of talks or other
+			events, inappropriate physical contact, and unwelcome sexual attention.
+			</p>
+
+			<p>
+			Participants asked to stop any harassing behavior are expected to comply
+			immediately.
+			</p>
+
+			<p>
+			Sponsors are also subject to the anti-harassment policy. In particular,
+			sponsors should not use sexualized images, activities, or other material. Sponsor
+			staff (including volunteers) should not use sexualized
+			clothing/uniforms/costumes, or otherwise create a sexualized environment.
+			</p>
+
+			<p>
+			If a participant engages in harassing behavior, the meeting organizers may take
+			any action they deem appropriate, including warning the offender or expulsion
+			from the meeting with no refund.
+			</p>
+
+			<p>
+			If you are being harassed, notice that someone else is being harassed, or have
+			any other concerns, please contact a meeting organizer immediately. Meeting
+			organizers will introduce themselves at the beginning of each meeting.
+			</p>
+
+			<p>
+			Meeting organizers will be happy to help participants contact venue security or
+			local law enforcement, provide escorts, or otherwise assist those experiencing
+			harassment to feel safe for the duration of the meeting. We value your
+			attendance.
+			</p>
+
+			<p>
+			We expect participants to follow these rules at all meeting venues, all
+			meeting-related social events, and on the JAWAD mailing list.
 			</p>
 		</section>
 	</div>
