Added funcitonality to email form

--- a/mailing-list.html
+++ b/mailing-list.html
@@ -61,11 +61,11 @@
 							</div>
 
 							<div class="ml2">
-								<input class="textinput" type="text" placeholder="Email">
+								<input name="email" class="textinput" type="text" placeholder="Email">
 							</div>
 
 							<div class="ml3">
-	              <input id="" class="" type="button" value="Sign Up" />
+	              <input id="mailinglist" class="" type="button" value="Sign Up" />
 	          	</div>
 
 						</form>
@@ -123,5 +123,6 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
 <script src="js/main.js"></script>
 <script src="js/resize.js"></script>
+<script src="js/sendmail.js"></script>
 </body>
 </html>
