--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta charset="UTF-8">
 	<title>{ JAWAD }</title>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 
-	
+
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,9 +29,11 @@
 <div class="navfixed">
 	<div class="leftnav">
 		<section class="navleft">
+			<a href="/" class=""><h3 >HOME</h3></a>
 			<a href="#" class="aboutus"><h3 >ABOUT</h3></a>
 			<a href="mailto:hello@developers.ms"><h3 class="contactus">CONTACT</h3>	</a>
 			<a href="mailto:hello@developers.ms?subject=Submit a talk" title="Submit a talk"><h3 class="giveatalk" >GIVE A TALK</h3></a>
+			<a href="/newsletter"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
