Added text to placeholder text

--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -76,7 +76,7 @@
 							</div>
 
 							<div class="ml2">
-								<input name="email" class="textinput" type="text" placeholder="your email address" id="updates-email">
+								<input name="email" class="textinput" type="text" placeholder="Enter your email address" id="updates-email">
 							</div>
 
 							<div class="ml3">
