Added signup for Startup weekend

--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -46,6 +46,7 @@
 			<a href="#" class="aboutus"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<a href="/" class=""><h3  >USEFUL LINKS</h3></a>
+			<a href="../startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
