--- a/startup-weekend.html
+++ b/startup-weekend.html
@@ -15,8 +15,7 @@
 	<!-- FIREBASE -->
 	<script src="bower_components/firebase/firebase.js"></script>
 
-	<script>
-	var ref = new Firebase("https://developers-newslette.firebaseio.com/");
+	<script>var ref = new Firebase("https://developers-newslette.firebaseio.com/");
 	var emailRef = ref.child("startupweekend");</script>
 	<!-- END FIREBASE -->
 	
@@ -42,8 +41,10 @@
 			<a href="#" class="aboutus"><h3 >ABOUT</h3></a>
 			<a href="mailto:hello@developers.ms"><h3 class="contactus">CONTACT</h3>	</a>
 			<a href="mailto:hello@developers.ms?subject=Submit a talk" title="Submit a talk"><h3 class="giveatalk" >GIVE A TALK</h3></a>
+			<a href="#" class="aboutus"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
+			<a href="startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
@@ -70,7 +71,7 @@
 						<form action="">
 							
 							<div class="ml1">
-								<label for="email" class="emailinput">Newsletter</label><br />
+								<label for="email" class="emailinput">STARTUP WEEKEND SIGNUP</label><br />
 							</div>
 
 							<div class="ml2">
@@ -78,28 +79,23 @@
 							</div>
 
 							<div class="ml3">
-	              <input id="mailinglist" class="" type="button" value="Sign Up" />
+	              <input id="mailinglist2" class="" type="button" value="Sign Up" />
 	          	</div>
 
 						</form>
 						<div class="mailing-list-copy">
-							<p>Please enter your email address if you would like to receive our weekly newsletter.</p>
+							<p>Please enter your email address if you would like to sign up to be sponsored for Startup Weekend.</p>
 						</div>
 						<div class="mailing-list-copy-description">
-							<p class="mailing-list-copy-heading">About the newsletter</p>
-							<p class="mailing-list-copy-p">We will send carefully curated content from around the web about web and application development. These will include articles, tutorials, blog posts, and tweets! </p>
-							<p class="mailing-list-copy-p">
-								We will also be keeping a pulse on the local community and any events, hackathons, job openings, or cool things happening in the Jackson &amp; Mississippi technology communities.</p>
-							</p>
-							<p class="mailing-list-copy-p">We everyone to contribute to the newsletter by emailing us at <a href="mailto:mailinglist@developers.ms?subject=Newsletter Submission" style="color:#8E8D8D">mailinglist@developers.ms</a> with any content you think the community will enjoy, we will even give you a shoutout!</p>
+							<p class="mailing-list-copy-heading">About startup weekend</p>
+							<p class="mailing-list-copy-p">We will be sending 10 developers to startup weekend. Sign up here, and we will notify you if you are chosen to be sponsored!</p>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 	</div>
-
-	
 
 	<!-- <div class="fifth-container-wrap">
 		<div class="fifth-container">
