--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<a href="/newsletter"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
+			<a href="startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
 	</div>
