Updated startup weekend signup

--- a/startup-weekend.html
+++ b/startup-weekend.html
@@ -39,12 +39,12 @@
 	<div class="leftnav">
 		<section class="navleft">
 			<a href="/" class=""><h3 >HOME</h3></a>
-			<a href="/" class="aboutus"><h3 >ABOUT</h3></a>
+			<a href="/" ><h3 >ABOUT</h3></a>
 			<a href="mailto:hello@developers.ms"><h3 class="contactus">CONTACT</h3>	</a>
 			<a href="mailto:hello@developers.ms?subject=Submit a talk" title="Submit a talk"><h3 class="giveatalk" >GIVE A TALK</h3></a>
 			<a href="/newsletter" class="aboutus"><h3 >NEWSLETTER</h3></a>
 			<a target="_blank" href="http://www.meetup.com/Jackson-Area-Web-And-App-Developers/"><h3>JOIN THE MEETUP</h3></a>
-			<a href="/" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
+			<a href="/" ><h3  >USEFUL LINKS</h3></a>
 			<a href="startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
 		</section>
