--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<a href="#" class="usefullinks"><h3  >USEFUL LINKS</h3></a>
 			<a href="startup-weekend.html" ><h3  >STARTUP WEEKEND</h3></a>
 			<a href="https://twitter.com/jacksondevs" target="_blank"><h3><i class="fa fa-twitter"></i></h3></a>
+			<h3><script async defer src="https://jawad-slack.herokuapp.com/slackin.js?large"></script></h3>
 		</section>
 	</div>
 </div>
@@ -259,6 +260,7 @@
 			<div class="footer-content">
 				<a href="mailto:hello@developers.ms"><h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4></a>
 				<a href="https://twitter.com/jacksondevs" target="_blank"><h3 class="footer-h3"><i class="fa fa-twitter"></i></h3></a>
+				<h3><script async defer src="https://jawad-slack.herokuapp.com/slackin.js?large"></script></h3>
 			</div>
 		</div>
 	</footer>
