use smaller slack button in footer and add footer-h3 class so it floats right

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<div class="footer-content">
 				<a href="mailto:hello@developers.ms"><h4 class="footer-h4">HELLO@DEVELOPERS.MS</h4></a>
 				<a href="https://twitter.com/jacksondevs" target="_blank"><h3 class="footer-h3"><i class="fa fa-twitter"></i></h3></a>
-				<h3><script async defer src="https://jawad-slack.herokuapp.com/slackin.js?large"></script></h3>
+				<h3 class="footer-h3"><script async defer src="https://jawad-slack.herokuapp.com/slackin.js"></script></h3>
 			</div>
 		</div>
 	</footer>
