--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</section>
 	</div>
 
-	<div class="third-container">
+	<div class="third-container conduct-container">
 		<section class="third-container-3">
 			<div class="line-holder-2">
 				<img class="line1" src="images/darkline3.png" alt="">
@@ -204,11 +204,11 @@
 						<p>Webcare 360</p>
 						<img src="images/webcare.png" style="width:250px;" alt="">
 					</div>
-					<div class="sponsor sponsortwo">
+					<!-- <div class="sponsor sponsortwo">
 						<p>The Hive</p>
 						<img src="images/hive.png" style="width:250px;" alt="">
 					</div>
-				</div>
+				</div> -->
 				<div class="clearfix"></div>
 				<div class="webcare">
 					<h4>
@@ -216,21 +216,21 @@
 					</h4>
 					<p>WebCare360 provides Outstanding Anonymous Offshore European Web Hosting, Reseller Hosting, VPS Hosting and Dedicated Servers and Powerful DDoS mitigation Solutions</p>
 				</div>
-				<div class="hive">
+				<!-- <div class="hive">
 					<h4>
 						<a target="_blank" href="http://www.workinthehive.com">#thehive</a>
 					</h4>
 					<p>#HIVE is a workspace community of entrepreneurs, freelancers, and creators. The hive offers a non-traditional working environment that puts their members together in one place with coworkers from different backgrounds. This dynamic allows for incredible cross-market collaboration.</p>
-				</div>
+				</div> -->
 			</section>
 
 			<section class="mobile-sponsors">
 				<div class="mobile-sponsor">
 					<a target="_blank" href="http://www.webcare360.com"><p class="mobile-sponsor-link">Webcare360.com</p></a>
 				</div>
-				<div class="mobile-sponsor" style="margin-top:30px;">
+				<!-- <div class="mobile-sponsor" style="margin-top:30px;">
 					<a target="_blank" href="http://www.workinthehive.com"><p class="mobile-sponsor-link">#thehive</p></a>
-				</div>
+				</div> -->
 			</section>
 
 		</div>
